# patience-diff-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: bin.rs  lib.rs
src/testdata/: after.c  before.c  overlap-after.c  overlap-before.c
