[package]
name = "patience-diff"
version = "0.1.0"
authors = ["Tom Hunger <tehunger@gmail.com>"]
edition = "2018"

[dependencies]
# At some point in the future we might have
# bin-specific dependencies, until then I'm using argh
# for argument parsing which doesn't pull in things
# like a yaml parser.
# https://github.com/dmarcuse/rfcs/blob/master/text/0000-cargo-artifact-specific-dependencies.md
argh = "0.1.3"
chrono = "0.4.1"


[dev-dependencies]
proptest = "0.9.5"


[[bin]]
name = "pdiff"
path = "src/bin.rs"

